<resources>

    <string name="app_name">GalNET.ru</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="about_app_description">This application is a client for the fansite galnet.ru. All content in this app is provided by galnet.ru community.</string>
    <string name="about_app_credits">This application is not related to Frontier Developments plc. All used information obtained from public sources. All materials belong to their respective owners.</string>
    <string name="about_app_contacts">Contacts: <a href="mailto:solargate.team@gmail.com">solargate.team@gmail.com</a></string>

    <string name="notification_new_post_title">GalNET.ru news</string>
    <string name="notification_new_post_text">new posts on GalNET.ru</string>
    <string name="notification_radio_title">GalNET.ru radio</string>
    <string name="notification_radio_text">Radio %s is playing&#8230;</string>

    <string name="feed_title">Feeds</string>
    <string name="feed_all">All Feeds</string>
    <string name="feed_galnet_news">GalNET News</string>
    <string name="feed_powerplay">PowerPlay</string>
    <!--<string name="feed_weekly_report">Weekly Report</string>-->
    <string name="feed_comm_goals">Community Goals</string>
    <string name="feed_comm_news">Community News</string>
    <string name="feed_empire">Empire</string>
    <string name="feed_federation">Federation</string>
    <string name="feed_alliance">Alliance</string>
    <string name="feed_site_news">Site News</string>

    <string name="radio_soft">Radio SOFT</string>
    <string name="radio_hard">Radio HARD</string>
    <string name="radio_soft_playing">GalNET.ru Radio SOFT is playing</string>
    <string name="radio_hard_playing">GalNET.ru Radio HARD is playing</string>
    <string name="radio_buffering_title">Please wait</string>
    <string name="radio_buffering_descriprion">Buffering&#8230;</string>

    <string name="pref_notification">Notifications</string>
    <string name="pref_notification_description">Enable notifications about new posts</string>
    <string name="pref_refresh_interval">Refresh interval</string>
    <string name="pref_refresh_interval_description">News refresh interval</string>
    <string name="pref_refresh_interval_default_value">1h</string>
    <string name="pref_galnet_font">GalNET font</string>
    <string name="pref_galnet_font_description">Use GalNET font</string>

    <string name="err_no_network">No network connection</string>

    <string-array name="pref_refresh_interval">
        <!--<item>1 minute</item>-->
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>4 hours</item>
        <item>6 hours</item>
    </string-array>
    <string-array name="pref_refresh_interval_values">
        <!--<item>1m</item>-->
        <item>15m</item>
        <item>30m</item>
        <item>1h</item>
        <item>4h</item>
        <item>6h</item>
    </string-array>

</resources>
