<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/about_app_description"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/about_credits"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:text="@string/about_app_credits"
        android:autoLink="web"/>

    <TextView
        android:id="@+id/about_contacts"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingTop="20dp"
        android:text="@string/about_app_contacts"
        android:autoLink="email"/>

</LinearLayout>